geting global var

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <header>
       <h1>Favorite Movies</h1>
-      <button>ADD MOVIE</button>
+      <button id="addMovieBtn">ADD MOVIE</button>
     </header>
 
     <main>
